--- a/solution.ipynb
+++ b/solution.ipynb
@@ -9,6 +9,56 @@
     "def line_to_dimension(x):return [int(dim) for dim in x.split(\"\\t\")]\n",
     "print (line_to_dimension(\"x y\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class c:\n",
+    "    def __init__(self,x):\n",
+    "        self.x=x\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "c_1 = c(5)\n",
+    "c_2 = c(5)\n",
+    "print(c_1 == c_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,2,3]\n",
+    "print(a[1:])"
+   ]
   }
  ],
  "metadata": {
